--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,5 +1,6 @@
 spring.application.name=servicio-zuul-server
 spring.cloud.config.uri=http://localhost:8888
+#spring.cloud.config.uri=http://config-server:8888
 management.endpoint.web.exposure.include=*
 
 
